--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,7 @@
       }
       .container {
         display: flex;
+        flex-direction: column;
         flex-grow: 1;
         justify-content: center;
         align-items: center;
@@ -19,11 +20,15 @@
       .container img {
         width: 30px;
       }
+      #play-button {
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <img src="assets/icon.png" id="play-button" alt="Play" />
+      <input type="range" id="speed" min="0.1" max="2" step="0.1" />
     </div>
     <script src="scripts/popup.js"></script>
   </body>
