--- a/popup.html
+++ b/popup.html
@@ -2,33 +2,29 @@
 <html>
   <head>
     <title>Text-to-Speech Extension</title>
-    <style>
-      body {
-        width: 200px;
-        height: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .container {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        justify-content: center;
-        align-items: center;
-      }
-      .container img {
-        width: 30px;
-      }
-      #play-button {
-        cursor: pointer;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <img src="assets/icon.png" id="play-button" alt="Play" />
-      <input type="range" id="speed" min="0.1" max="2" step="0.1" />
+    <div class="media-controls">
+      <div class="media-buttons">
+        <button id="stop-button" class="stop-button media-button" label="stop">
+          <i class="fas fa-stop button-icons"></i>
+          <span class="button-text">Stop</span>
+        </button>
+
+        <button id="play-button" class="play-button media-button" label="play">
+          <i class="fas fa-play button-icons delta"></i>
+          <span class="button-text">Play</span>
+        </button>
+      </div>
+      <div class="speed-range">
+        <input type="range" id="speed" min="0.1" max="2" step="0.1" />
+        <div id="speed-text"></div>
+      </div>
     </div>
     <script src="scripts/popup.js"></script>
   </body>
